Fixed HTML, redirect to homepage (Bootstrap bug?)

--- a/contact_me.html
+++ b/contact_me.html
@@ -35,7 +35,7 @@
   <body style="background-color:#d1cfce;">
   	<!-- Navbar example from bootstrap website-->
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:rgba(219, 219, 219, 0.39)">
-  	<a class="navbar-brand" href="#">NavBar</a>
+  	<a class="navbar-brand" href="#">RZ</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
