Updated Projects Page

--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,26 @@
   </div>
 </div>
 
-<center><h3>-Coming Soon-</h3></center>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-sm-6">
+      <h3><strong>Lua</strong></h3>
+      <p>By far the most language that I am comfortable in.</p>
+      <ul>
+        <li>Roblox Game Developer (2+ years)</li>
+        <li>Knowledge/Usage of different frameworks (AeroGameFramework, Roact)</li>
+      </ul>
+      See my full portfolio <a href="https://devforum.roblox.com/t/closed-ninjamastr999-macandswiss-programming-focused-developer/615313">here</a>.
+    </div>
+  </div>
+  <div class = "row pt-5">
+    <div class = "col-sm-6">
+      <h3><strong>Java</strong></h3>
+      <p>From Minecraft mods all the way to general applications, I've seen (and done a bit) of it all.</p>
+      <i>Currently, projects are unavailable.</i>
+    </div>
+  </div>
+</div>
 
  
     <!-- Optional JavaScript -->
