Updated projects page with new items.

--- a/projects.html
+++ b/projects.html
@@ -22,14 +22,6 @@
     .jumbotron {
       background-color:#d1cfce;
     }
-
-    .card-img-top {
-      min-width: 100%;
-      height: auto;
-      width: auto;
-      object-fit: cover;
-      flex-shrink: 0;
-    }
     </style>
   </head>
   <body style="background-color:#d1cfce;">
@@ -58,7 +50,7 @@
 </nav>
 
 <div class="jumbotron jumbotron-fluid">
-  <div class="container" style="color:black">
+ <div class="container" style="color:black">
     <h1 class="display-3">Projects demonstrate my expertise in various languages.</h1>
     <hr>
   </div>
@@ -66,24 +58,32 @@
 
 <div class = "container">
   <div class = "row">
-    <div class = "col-sm-6">
+    <div class = "col">
       <h3><strong>Lua</strong></h3>
       <p>By far the most language that I am comfortable in.</p>
       <ul>
         <li>Roblox Game Developer (2+ years)</li>
         <li>Knowledge/Usage of different frameworks (AeroGameFramework, Roact)</li>
       </ul>
-      See my full portfolio <a href="https://devforum.roblox.com/t/closed-ninjamastr999-macandswiss-programming-focused-developer/615313">here</a>.
+      See my full portfolio <a target="_blank" rel="noopener noreferrer" href="https://devforum.roblox.com/t/closed-ninjamastr999-macandswiss-programming-focused-developer/615313">here</a>.
     </div>
   </div>
   <div class = "row pt-5">
-    <div class = "col-sm-6">
+    <div class = "col">
       <h3><strong>Java</strong></h3>
       <p>From Minecraft mods all the way to general applications, I've seen (and done a bit) of it all.</p>
       <i>Currently, projects are unavailable.</i>
     </div>
   </div>
+  <div class = "row pt-5">
+    <div class = "col">
+      <h3><strong>JavaScript</strong></h3>
+      <p>Anything and everything that runs on the web.</p>
+      <p>Check out the <a target="_blank" rel="noopener noreferrer" href="https://github.com/raymondwzeng/Coinpot-Faucet-Utility">CoinPot Faucet Utility</a>, a lightweight plugin that has an anti-anti adblock and a quick launch popout.</p>
+    </div>
+  </div>
 </div>
+<center><i>This page will be updated as I continue to learn and create.</i></center>
 
  
     <!-- Optional JavaScript -->
