--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="refresh" content="0; url=homepage.html" />
+    <meta http-equiv="refresh" content="0; url=homepage.html" /> <!--IMPORTANT, KEEP THIS FILE, REDIRECTS TO HOMEPAGE.-->
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    
 
  <br>
     <!-- Optional JavaScript -->
