--- a/homepage.html
+++ b/homepage.html
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="col">
         <h2 class="display-4">Who am I?</h2>
-        <p>I am an 18 year old high-school student currently awaiting college acceptances, while honing my skills in content creation, communication, and development.</p>
+        <p>I am an 18 year old college student, majoring in computer science at the Unversity of California, Riverside. Beyond college, I am working on my communication, programming and content creation skills.</p>
         <h4>My goals:</h4>   
         <ul>
           <li>Create professional portfolio</li>
