--- a/contact_me.html
+++ b/contact_me.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Portfolio Website</title>
+    <title>Raymond's Portfolio</title>
 
     <style>
 		hr
@@ -21,6 +21,7 @@
 
     .jumbotron {
       background-color:#d1cfce;
+      padding-bottom: 0px;
     }
 
     .card-img-top {
