--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Portfolio Website</title>
+    <title>Raymond's Portfolio</title>
 
     <style>
 		hr
@@ -21,6 +21,7 @@
 
     .jumbotron {
       background-color:#d1cfce;
+      padding-bottom: 0px;
     }
 
     .card-img-top {
@@ -29,6 +30,10 @@
       width: auto;
       object-fit: cover;
       flex-shrink: 0;
+    }
+
+    .hover:hover {
+      transform: scale(1.3);
     }
     </style>
   </head>
@@ -42,7 +47,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="projects.html">Projects</a>
@@ -60,27 +65,30 @@
     <!-- End of example-->
     <div class="jumbotron jumbotron-fluid">
       <div class="container" style="color:black">
-        <h1 class="display-3">Hi, I'm <strong>Raymond</strong>. <br>Aspiring programmer and content creator.</h1>
+        <h1 class="display-3">Hi, I'm <strong>Raymond</strong>. <br>Programmer, educator, and content creator.</h1>
         <hr>
       </div>
     </div>
 
   <div class="container">
-    <div class="row">
-      <div class="col">
-        <h2 class="display-4">Who am I?</h2>
-        <p>I am an 18 year old college student, majoring in computer science at the Unversity of California, Riverside. Beyond college, I am working on my communication, programming and content creation skills.</p>
-        <h4>My goals:</h4>   
-        <ul>
-          <li>Create professional portfolio</li>
-          <li>Achieve financial independence</li>
-          <li><s>World domination</s></li>
-        </ul>     
+        <div class="row">
+          <h2 class="display-4">Who am I?</h2>
+          <p>I am an 19 year old college student, majoring in computer science at the Unversity of California, Riverside. Beyond college, I am working on my communication, programming and content creation skills.</p>
+          <ul>
+            <h4>My goals:</h4>   
+            <li>Create portfolio</li>
+            <li>Achieve financial independence</li>
+            <li><s>World domination</s></li>
+          </ul>     
+      </div> 
+      <div class="row">
+          <h2 class = "display-4">Skills/Experience at a glance</h2>
+          <ul>
+            <li>Co-author of <strong>Roblox Game Development in 24 Hours: The Official Roblox Guide (Sams Teach Yourself)</strong></li>
+            <li>Proficient in Lua, Java, and JS, along with tools such as Git and React/Redux</li>
+            <li>Can make a decent cup of espresso</li>
+          </ul>
       </div>
-      <div class="col">
-        <img class="img-fluid w-100 img-rounded" src="Resources/headshot.jpg"/>
-      </div>
-    </div>
   </div>
 
   <br>
@@ -88,11 +96,11 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col-sm"><center><a href="https://youtube.com/c/MacAndSwiss" target="_blank"><img width="142" height="100" src="Resources/yt_icon_rgb.png" alt="Youtube"></a></center></div>
-      <div class="col-sm"><center><a href="https://twitter.com/macandswiss" target="_blank"><img width="100" height="100" src="Resources/Twitter_Social_Icon_Rounded_Square_Color.png" alt="Twitter"></a></center></div>
-      <div class="col-sm"><center><a href="https://instagram.com/macandswiss_" target="_blank"><img width="100" height="100" src="Resources/Instagram_AppIcon.png" alt="Instagram"></a></center></div>
-      <div class="col-sm"><center><a href="https://twitch.tv/macandswiss" target="_blank"><img width="86" height="100" src="Resources/TwitchGlitchPurple.png" alt="Twitch"></a></center></div>
-      <div class="col-sm"><center><a href="https://www.linkedin.com/in/raymond-zeng-833725163/" target="_blank"><img width="118" height="100" src="Resources/LI-In-Bug.png" alt="LinkedIn"></a></center></div>
+      <div class="col-sm hover"><center><a href="https://youtube.com/c/MacAndSwiss" target="_blank"><img width="142" height="100" src="Resources/yt_icon_rgb.png" alt="Youtube"></a></center></div>
+      <div class="col-sm hover"><center><a href="https://twitter.com/macandswiss" target="_blank"><img width="100" height="100" src="Resources/Twitter_Social_Icon_Rounded_Square_Color.png" alt="Twitter"></a></center></div>
+      <div class="col-sm hover"><center><a href="https://instagram.com/macandswiss_" target="_blank"><img width="100" height="100" src="Resources/Instagram_AppIcon.png" alt="Instagram"></a></center></div>
+      <div class="col-sm hover"><center><a href="https://twitch.tv/macandswiss" target="_blank"><img width="86" height="100" src="Resources/TwitchGlitchPurple.png" alt="Twitch"></a></center></div>
+      <div class="col-sm hover"><center><a href="https://www.linkedin.com/in/raymond-zeng-833725163/" target="_blank"><img width="118" height="100" src="Resources/LI-In-Bug.png" alt="LinkedIn"></a></center></div>
     </div>
   </div>
 
