--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Portfolio Website</title>
+    <title>Raymond's Portfolio</title>
 
     <style>
 		hr
@@ -21,6 +21,11 @@
 
     .jumbotron {
       background-color:#d1cfce;
+      padding-bottom: 0px;
+    }
+
+    .card {
+      background-color: #ececec;
     }
     </style>
   </head>
@@ -57,37 +62,56 @@
 </div>
 
 <div class = "container">
+  <h3><strong>Lua</strong></h3>
   <div class = "row">
-    <div class = "col">
-      <h3><strong>Lua</strong></h3>
-      <p>By far the most language that I am comfortable in.</p>
+      <p>The language that I am most comfortable in, with multiple years of experience.</p>
       <ul>
+        <li>Full-stack programmer for <a target="_blank" rel="noopener noreferrer" href="https://www.roblox.com/games/5450152686/Escape-from-CLUCKY-ALPHA"><strong>Legends of Clucky</strong></a></li>
+        <li>Co-author of <strong>Roblox Game Development in 24 Hours: The Official Roblox Guide (Sams Teach Yourself)</strong>, focusing on programming in Lua</li>
         <li>Roblox Game Developer (2+ years)</li>
         <li>Knowledge/Usage of different frameworks (AeroGameFramework, Roact)</li>
       </ul>
-      See my full portfolio <a target="_blank" rel="noopener noreferrer" href="https://devforum.roblox.com/t/closed-ninjamastr999-macandswiss-programming-focused-developer/615313">here</a>.
+      See my full portfolio <a target="_blank" rel="noopener noreferrer" href="https://devforum.roblox.com/t/closed-ninjamastr999-macandswiss-programming-focused-developer/615313">&nbsp;here</a>.
     </div>
-  </div>
-  <div class = "row pt-5">
-    <div class = "col">
-      <h3><strong>Java</strong></h3>
-      <p>From Minecraft mods all the way to general applications, I've seen (and done a bit) of it all.</p>
-      <i>Currently, projects are unavailable.</i>
-    </div>
-  </div>
-  <div class = "row pt-5">
-    <div class = "col">
-      <h3><strong>JavaScript</strong></h3>
-      <p>Anything and everything that runs on the web.</p>
-      <p>Check out the <a target="_blank" rel="noopener noreferrer" href="https://github.com/raymondwzeng/Coinpot-Faucet-Utility">CoinPot Faucet Utility</a>, a lightweight plugin that has an anti-anti adblock and a quick launch popout.</p>
-    </div>
+</div>
+<div class="container">
+  <h4>Highlights</h4>
+  <div class="row">
+    <div class="card mx-auto">
+      <img src="Resources/Projects/Lua/twinstick_demo.gif" alt="GIF">
+      <div class="card-body">
+        <h5 class="card-title">Twin-Stick Shooter Demo</h5>
+        <p class="card-text">A small demo of a twin stick shooter, with joystick controls on mobile and mouse on PC.</p>
+      </div>
+    </div> 
   </div>
 </div>
-<center><i>This page will be updated as I continue to learn and create.</i></center>
+<div class="container">
+  <h3><strong>Java</strong></h3>
+  <div class = "row">
+      <p>From Minecraft mods all the way to general applications, I've seen (and done a bit) of it all.</p>
+  </div>
+  <div class="row">
+    <ul>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/raymondwzeng/datastructs-and-algorithms">Datastructs and Algorithms</a>, a repository for my DSA/interview practice.</li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.curseforge.com/minecraft/mc-mods/pickup-explosions">Pickup Explosions</a>, a Minecraft mod which produces an explosion every time an item is picked up.</li>
+    </ul>
+  </div>
+</div>
+<div class="container">
+  <h3><strong>JavaScript</strong></h3>
+  <div class = "row">
+      <p>Anything and everything that runs on the web.</p>
+   </div>
+   <div class="row">
+     <ul>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/raymondwzeng/Coinpot-Faucet-Utility">CoinPot Faucet Utility</a>, a lightweight plugin that has an anti-anti adblock and a quick launch popout.</li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://chrome.google.com/webstore/detail/nobobux/pfnhchkfbieddalghdhaidcdjkbefoel">NoBobux</a>, a small plugin which hides the user's Robux count on Roblox and subdomains.</li>
+    </ul>
+</div>
+</div>
 
- 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<center><i>This page will be updated as I continue to learn and create.</i></center>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
