--- a/contact_me.html
+++ b/contact_me.html
@@ -49,7 +49,7 @@
         <a class="nav-link" href="projects.html">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://rantyhorse.home.blog">Blog</a>
+        <a class="nav-link" href="https://macandthoughts.wordpress.com">Blog</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="contact_me.html">Contact Me</a>
