--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
         <a class="nav-link" href="projects.html">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://rantyhorse.home.blog">Blog</a>
+        <a class="nav-link" href="https://macandthoughts.wordpress.com">Blog</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact_me.html">Contact Me</a>
