--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="refresh" content="0; url=homepage.html" /> <!--IMPORTANT, KEEP THIS FILE, REDIRECTS TO HOMEPAGE.-->
+    <meta http-equiv="refresh" content="0; url="https://raymondwzeng.github.io/portfolio-v2/" /> <!--IMPORTANT, KEEP THIS FILE, REDIRECTS TO HOMEPAGE.-->
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
